# multi_monitor_bg_creator

./: .gitignore  README.md  main.py  pyproject.toml
multi_monitor_bg_creator/: resize.py
python_triplemonitorbg_creator/: resize.py
